add route object for dijkstra return